updated html page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,33 @@
     <title>Company Website</title>
 </head>
 <body>
+    <header>
+        <ul class="nav justify-content-center">
+            <li class="nav-item">
+<!--Jada will do home-->
+              <a class="nav-link active" href="/kels.html">Home</a>
+            </li>
+            <li class="nav-item">
+<!--Kel will do the About Us Page-->
+              <a class="nav-link" href="#">About Us</a>
+            </li>
+            <li class="nav-item">
+<!--Deanna will do Sign Up page-->
+              <a class="nav-link" href="#">Sign Up</a>
+            </li>
+            <li class="nav-item">
+<!--Cheris will do Vision page-->
+              <a class="nav-link" href="#">Vision</a>
+            </li>
+          </ul>
+    </header>
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
     
 </body>
 </html>
