jada's first commit

--- a/index.html
+++ b/index.html
@@ -16,25 +16,54 @@
             </li>
             <li class="nav-item">
 <!--Kel will do the About Us Page-->
-              <a class="nav-link" href="#">About Us</a>
+              <a class="nav-link" href="/aboutus.html">About Us</a>
             </li>
             <li class="nav-item">
 <!--Deanna will do Sign Up page-->
-              <a class="nav-link" href="#">Sign Up</a>
+              <a class="nav-link" href="/signup.html">Sign Up</a>
             </li>
             <li class="nav-item">
 <!--Cheris will do Vision page-->
-              <a class="nav-link" href="#">Vision</a>
+              <a class="nav-link" href="/vision.html">Vision</a>
             </li>
           </ul>
     </header>
+
     <main>
+      <div class="alert alert-primary m-0" role="alert">
+        Be sure to sign up for our sign up <a href="/signup.html" class="alert-link">by visiting this link</a>.
+      </div>
+      
+      <div class="text-center">
+        <div class="jumbotron p-4">
+          <h1 class="display-4">Welcome to our Company Website</h1>
+          <p class="lead">We are a company who buys or sells things and we want you as a customer!</p>
+          <hr class="my-4">
+          <p>Check out our Sign Up page to sign up.</p>
+          <p class="lead">
+            <a class="btn btn-primary btn-lg" href="#" role="button">Sign Up</a>
+          </p>
+        </div>
+        <img src="img/company.jpg" class="rounded" alt="buildings">
+      </div>
 
     </main>
 
     <footer>
-
+      <ul class="nav justify-content-center">
+        <li class="nav-item">
+          <a class="nav-link active" href="/index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/aboutus.html">About Us</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/signup.html">Sign Up</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/vision.html">Vision</a>
+        </li>
+      </ul>
     </footer>
-    
 </body>
 </html>
