--- a/aboutus.html
+++ b/aboutus.html
@@ -30,8 +30,8 @@
     </header>
     <main>
        <p class="h1">About Us</p>
-       
-<div class="card-container d-md-flex">
+<div class="container">       
+  <div class="card-container d-md-flex">
 
        <div class="card" style="width: 20rem;">
         <img src="..." class="card-img-top" alt="...">
@@ -73,6 +73,7 @@
           <a href="#" class="btn btn-primary">IG Kel</a>
         </div>
       </div>
+ </div>
 </div>
     </main>
 
