Updates from Jada

--- a/companyvision.html
+++ b/companyvision.html
@@ -12,19 +12,19 @@
         <ul class="nav justify-content-center">
             <li class="nav-item">
 <!--Jada will do home-->
-              <a class="nav-link active" href="/kels.html">Home</a>
+              <a class="nav-link active" href="index.html">Home</a>
             </li>
             <li class="nav-item">
 <!--Kel will do the About Us Page-->
-              <a class="nav-link" href="#">About Us</a>
+              <a class="nav-link" href="aboutus.html">About Us</a>
             </li>
             <li class="nav-item">
 <!--Deanna will do Sign Up page-->
-              <a class="nav-link" href="#">Sign Up</a>
+              <a class="nav-link" href="SignUp.html">Sign Up</a>
             </li>
             <li class="nav-item">
 <!--Cheris will do Vision page-->
-              <a class="nav-link" href="#">Vision</a>
+              <a class="nav-link" href="companyvision.html">Vision</a>
             
             </li>
           </ul>
