--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel = "stylesheet" type = "text/css" href = "styles.css" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>Company Website</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
         <ul class="nav justify-content-center">
             <li class="nav-item">
 <!--Jada will do home-->
-              <a class="nav-link active" href="/kels.html">Home</a>
+              <a class="nav-link active" href="/index.html">Home</a>
             </li>
             <li class="nav-item">
 <!--Kel will do the About Us Page-->
@@ -20,11 +20,11 @@
             </li>
             <li class="nav-item">
 <!--Deanna will do Sign Up page-->
-              <a class="nav-link" href="/signup.html">Sign Up</a>
+              <a class="nav-link" href="/SignUp.html">Sign Up</a>
             </li>
             <li class="nav-item">
 <!--Cheris will do Vision page-->
-              <a class="nav-link" href="/vision.html">Vision</a>
+              <a class="nav-link" href="/companyvision.html">Vision</a>
             </li>
           </ul>
     </header>
@@ -58,10 +58,10 @@
           <a class="nav-link" href="/aboutus.html">About Us</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/signup.html">Sign Up</a>
+          <a class="nav-link" href="/SignUp.html">Sign Up</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/vision.html">Vision</a>
+          <a class="nav-link" href="/companyvision.html">Vision</a>
         </li>
       </ul>
     </footer>
