more updates on aboutus

--- a/aboutus.html
+++ b/aboutus.html
@@ -12,60 +12,60 @@
         <ul class="nav justify-content-center">
             <li class="nav-item">
 <!--Jada will do home-->
-              <a class="nav-link active" href="/kels.html">Home</a>
+              <a class="nav-link active" href="index.html">Home</a>
             </li>
             <li class="nav-item">
 <!--Kel will do the About Us Page-->
-              <a class="nav-link" href="#">About Us</a>
+              <a class="nav-link" href="aboutus.html">About Us</a>
             </li>
             <li class="nav-item">
 <!--Deanna will do Sign Up page-->
-              <a class="nav-link" href="#">Sign Up</a>
+              <a class="nav-link" href="SignUp.html">Sign Up</a>
             </li>
             <li class="nav-item">
 <!--Cheris will do Vision page-->
-              <a class="nav-link" href="#">Vision</a>
+              <a class="nav-link" href="companyvision.html">Vision</a>
             </li>
           </ul>
     </header>
     <main>
        <p class="h1">About Us</p>
        
-<div class="card-container d-md-flex">
+<div class="card-container d-md-flex justify-content-center">
 
        <div class="card" style="width: 20rem;">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="mountainous-sunlight.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Deanna</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Introduce yourself and describe some functions you are responsible for.</p>
           <a href="#" class="btn btn-primary">#tweetme Deanna</a>
           <a href="#" class="btn btn-primary">IG Deanna</a>
         </div>
       </div>
 
-      <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+      <div class="card" style="width: 20rem;">
+        <img src="mountainous-sunlight.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Cheris</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Introduce yourself and describe some functions you are responsible for.</p>
           <a href="#" class="btn btn-primary">#tweetme Cheris</a>
           <a href="#" class="btn btn-primary">IG Cheris</a>
 
         </div>
       </div>
 
-      <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+      <div class="card" style="width: 20rem;">
+        <img src="mountainous-sunlight.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Jada</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <p class="card-text">Introduce yourself and describe some functions you are responsible for.</p>
           <a href="#" class="btn btn-primary">#tweetme Jada</a>
           <a href="#" class="btn btn-primary">IG Jada</a>
         </div>
       </div>
 
-      <div class="card" style="width: 18rem;">
-        <img src="..." class="card-img-top" alt="...">
+      <div class="card" style="width: 20rem;">
+        <img src="mountainous-sunlight.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Kel</h5>
           <p class="card-text">Hi! My name is Kel. I've been with CompanyWebsite for 2 years. I work am on the Cyber Security Team. My team ensures the infrastructure is safe from external and internal threats.</p> <p>Follow me on Twitter and IG to learn about how not to let the "Man in the Middle" come between you and your data!!</p>
